--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
       <h1>What are your favorite hobbies?</h1>
       <p>Playing guitar, bass, and woodworking.</p>
       <h1>What's your dream job?</h1>
-      <p>I don't have a dream job so much as I desire great success. If I had to pick something, I would love to earn a comfortable living as a musician.</p>
+      <p>I don't have a dream job so much as I have a desire for great success. If I had to pick something, I would love to earn a comfortable living as a musician.</p>
       <h1>Where do you live?</h1>
       <p>I live in Tampa, Florida.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I am a logical and meticulous individual. I find coding to be of great interest and the feeling of seeing it all come together and work highly</p>
+      <p>I am a logical and meticulous individual. I find coding to be of great interest and the feeling of seeing it all come together and work highly rewarding.</p>
     </section>
 
     <footer id="footer">
